[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
easybit = { path = "../deps/easybit" }
frame-alloc = { path = "../deps/frame-alloc" }
acpi = { path = "../deps/acpi" }
limine_mini = { path = "../deps/limine_mini" }
config = { path = "../deps/config" }
spin = "0.9"
log = "0.4"
bitflags = "2.4"
noto-sans-mono-bitmap = { version = "0.2.0", default-features = false, features = [
    "size_24",
    "regular",
    "unicode_ranges_default",
] }
linked_list_allocator = { version = "0.10.5", default-features = false }
raw-cpuid = "11.0.1"
xmas-elf = "0.9.1"
rustc-demangle = "0.1.23"

[build-dependencies]
nasm-rs = { version = "0.2", features = ["parallel"] }
