[package]
name = "acpi"
version = "5.0.0"
authors = ["Isaac Woods"]
repository = "https://github.com/rust-osdev/acpi"
description = "A pure-Rust library for parsing ACPI tables, fork of https://github.com/rust-osdev/acpi.git"
categories = ["hardware-support", "no-std"]
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
bit_field = "0.10.2"
log = "0.4.20"
