[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
easybit = { workspace = true }
limine_mini = { path = "../limine_mini" }
spin = "0.9"
log = "0.4"
bitflags = "1.3.2"

[build-dependencies]
nasm-rs = { version = "0.2", features = ["parallel"] }
