[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
easybit = { workspace = true }
frame-alloc = { workspace = true }
limine_mini = { path = "../limine_mini" }
spin = "0.9"
log = "0.4"
bitflags = "1.3"
noto-sans-mono-bitmap = { version = "0.2.0", default-features = false, features = ["size_24", "regular", "unicode_ranges_default"] }
linked_list_allocator = { version = "0.10.5", default-features = false }

[build-dependencies]
nasm-rs = { version = "0.2", features = ["parallel"] }
